--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-./Frontend/node_modules
-./Backend/node_modules
-./Backend/config/.env
-
+Frontend/node_modules
+Backend/node_modules
+Backend/config/.env
